--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <head>
-            <h1>Titulo do Site</h1>
+            <h1>Cursos gratis</h1>
         </head>
         <article>
-            <h2>Texto 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 e CSS3Texto 001</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam expedita unde dolor dolore nemo cum maxime accusantium veritatis! Cumque commodi, repellat dicta dolor minus iste magni distinctio sit deleniti temporibus.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de javascript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nihil illo perferendis! Quisquam possimus ipsam velit error doloribus voluptates adipisci minus eius, accusantium voluptas culpa molestias debitis accusamus a blanditiis.</p>
         </article>
     </main>
     
