--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
 <body>
     <main>
         <head>
-            
+            <h1>Cursos Grátis</h1>
         </head>
+        <article>
+            <h2>Cursos de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique non eius optio, animi ad accusamus odit suscipit eos sit natus pariatur unde exercitationem deserunt nesciunt, culpa laborum. Facere, repellendus similique!</p>
+        </article>
+        <article>
+            <h2>Curso de JS</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore expedita commodi unde? Repellendus fugiat quas natus dicta soluta eveniet aspernatur, vel tempora et quos nam veniam magni autem non ipsum.</p>
+        </article>
     </main>
     
 </body>
