--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Cursos gratis</h1>
         </head>
         <article>
-            <h2>Curso de HTML5 e CSS3Texto 001</h2>
+            <h2>Curso de HTML5 e CSS3</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam expedita unde dolor dolore nemo cum maxime accusantium veritatis! Cumque commodi, repellat dicta dolor minus iste magni distinctio sit deleniti temporibus.</p>
         </article>
         <article>
@@ -24,7 +24,7 @@
             <h1>Curso de HTML5 e CSS</h1>
         </head>
         <article>
-            <h2>Curso de HTML%</h2>
+            <h2>Curso de HTML</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias aliquam delectus minus accusantium distinctio corrupti dignissimos, explicabo in expedita? Fugit quisquam iste corporis ipsam aspernatur omnis laudantium recusandae nisi aliquid?</p>
         </article>
         <article>
